@@ -1,5 +1,5 @@
 CHANGES
-MANIFEST
+MANIFEST			This list of files
 MANIFEST.SKIP
 MANIFEST.bak
 Makefile
