@@ -3,3 +3,5 @@ MLDBM_SYNC
 MLDBM-Sync-\d
 Makefile\.old$
 \~$
+blib
+pm_to_blib
