@@ -1,7 +1,7 @@
 CHANGES
 MANIFEST
 MANIFEST.SKIP
-MANIFEST.SKIP~
+MANIFEST.bak
 Makefile
 Makefile.PL
 README
